# skiid

PretendInstanceManager/: env.example  main.py
akari/: .gitignore  cmds.json  main.py  schema.sql
blair/: README.md  donors.db  main.py  voicemaster.db
blee/: .gitignore  README.md  application.yml  config.py  ecosystem.config.js  launcher.py
bleed/: README.md  config.py  requirements.txt
coffin/: .gitignore  .gitmodules  LICENSE  README.md  RoadMap.md  pyproject.toml  requirements.txt  setup.sh
evelina/: README.md  evelina.sql
evict-latest/: .gitignore  README.md  config.py  database.sql  ecosystem.config.js  main.py  requirements.txt
evict-old/: .gitignore  README.md  ecosystem.config.js  evict.py  requirements.txt
greed_old/: README.md
grief/: Makefile  pyproject.toml  setup.py
grief-cogs/: README.md
grief-dashboard/: requirements.txt  setup.cfg
grief/grief/: __init__.py  __main__.py  logging.py  setup.py
grief/grief/cogs/cleanup/: __init__.py  checks.py  cleanup.py  converters.py
grief/grief/cogs/downloader/: __init__.py  checks.py  converters.py  downloader.py  errors.py  info_schemas.py  installable.py  log.py  repo_manager.py
grief/grief/core/: _cli.py  _cog_manager.py  _debuginfo.py  _diagnoser.py  _events.py  _global_checks.py  _rpc.py  _settings_caches.py  bot.py  checks.py  config.py  core_commands.py  data_manager.py  dev_commands.py  errors.py  generic_casetypes.py  i18n.py  modlog.py  tree.py
grief/grief/core/_drivers/: __init__.py  _mongo.py  base.py  json.py  log.py
grief/grief/core/_drivers/postgres/: ddl.sql  drop_ddl.sql  postgres.py
grief/grief/core/app_commands/: __init__.py  checks.py
grief/grief/core/commands/: __init__.py  commands.py  context.py  converter.py  errors.py  help.py  requires.py
grief/grief/core/converters/: converters.py
grief/grief/core/utils/: __init__.py  _internal_utils.py  antispam.py  chat_formatting.py  dbtools.py  embed.py  menus.py  mod.py  predicates.py  tunnel.py  views.py
heist/: .env  README.md  config.json  fluxus.py  helper.py  main.py  package-lock.json  package.json  screenshot.py  self.py  spotify.py  status.py  vanities.txt  webhook.py  words.json
heist-recode/: README.md  main.py  quote.py  spotify.py  tbp.py
heist-web/: .eslintrc.json  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
heresy/: .gitignore  LIMP WRIST.txt  README.md  afkruser.db  autorole_data.json  discord_tool.sh  join_log_settings.json  main.py  mod_log_channels.json  owners.json  ratelimit.py  reactions.db  requirements.txt  vcmem.json
honest/: README.md
kayo/: install.sh  main.py  requirements.txt
logs.akari.bot/: app.py  pretend_redis.py  upload.py  yes.json
luma/: .env  README.md  main.py
lure-web/: .env.example  README.md  (+6 more)
(+4119 files in other folders)
